[package]
name = "CuTE-tui"                                                                                                                     # crates.io/crates/CuTE is taken :(
version = "0.0.9"
authors = ["PThorpe92 <preston@unlockedlabs.org>"]
description = "A (ratatui) TUI for HTTP requests with libcurl, recursive downloads with wget, command storage and API key management"
license = "GPL-3.0"
edition = "2021"

[[bin]]
name = "cute"
path = "src/main.rs"

[dependencies]
crossterm = "0.27.0"
tui = { package = "ratatui", features = [
  "crossterm",
  "all-widgets",
  "serde",
  "macros",
], version = "0.23.0" }
tui-input = "0.8.0"
tui-widget-list = "0.3.0"
lazy_static = "1.4.0"
rusqlite = { version = "0.29.0", features = ["bundled"] }
serde_json = { version = "1.0.107", features = ["std"] }
serde = { version = "1.0.188", features = ["derive"] }
curl = "0.4.44"
mockito = "1.2.0"
regex = "1.9.5"
dirs = "5.0.1"
http = "0.2.9"
toml = "0.8.2"
terminal-clipboard = "0.4.0"
log = "0.4.17"
clap = "4.4.6"
once_cell = "1.18.0"
