[package]
name = "CuTE-tui"                                                                                                                     # crates.io/crates/CuTE is taken :(
version = "0.0.9"
authors = ["PThorpe92 <preston@unlockedlabs.org>"]
description = "A (ratatui) TUI for HTTP requests with libcurl, recursive downloads with wget, command storage and API key management"
license = "GPL-3.0"
edition = "2021"
repository = "https://github.com/PThorpe92/CuTE"

[[bin]]
name = "cute"
path = "src/main.rs"

[dependencies]
crossterm = "0.27.0"
tui = { package = "ratatui", features = [
  "crossterm",
  "all-widgets",
  "serde",
  "macros",
], version = "0.26.0" }
tui-input = "0.8.0"
tui-widget-list = "0.7.1"
lazy_static = "1.4.0"
rusqlite = { version = "0.30.0", features = ["bundled"] }
serde_json = { version = "1.0.113", features = ["std"] }
serde = { version = "1.0.196", features = ["derive"] }
mockito = "1.2.0"
regex = "1.10.3"
curl = { version = "0.4.45", features = ["http2", "ntlm", "spnego", "ssl"] }
dirs = "5.0.1"
http = "1.0.0"
toml = "0.8.10"
arboard = "3.3.0"
log = "0.4.20"
clap = "4.5.0"
once_cell = "1.19.0"


[profile.release]
strip = "debuginfo"
